<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="title_activity_keys">Keys</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_error_title">Error</string>
    <string name="common_error_body">Unexpected Error: %1$s</string>
    <string name="key_type_unknown">(unknown key type)</string>
    <string name="key_type_sharedpassphrase">shared keyphrase</string>
    <string name="key_type_random">secret random key</string>
    <string name="error_keystore_aliasnotunique">You already have a key with alias \"%1$s\"</string>
    <string name="keystore_password_hint">Password</string>
    <string name="keystore_password_confirm_hint">Confirmation</string>
    <string name="error_passwords_dont_match">Password mismatch</string>
    <string name="error_password_length">The password is too weak!</string>
    <string name="error_password_wrong">The password is wrong!</string>
    <string name="error_alias_length">The alias must be at least %1$s characters long!</string>
    <string name="error_alias_exists">You already have a key with that alias!</string>
    <string name="action_addkey_importqr_title" translatable="false">QR-Code</string>
    <string name="action_addkey_importqr_body">Import by scanning a QR-Code from another phone or backup printout.</string>
    <string name="action_createkey_title">Create a new key</string>
    <string name="action_createkey_pbe_title">Shared Keyphrase</string>
    <string name="action_createkey_pbe_body">Enter your own passphrase.\nEasy to share with your friend through a phonecall, but much less secure than a secret key because somebody can guess the password!</string>
    <string name="action_createkey_random_title">Random Key</string>
    <string name="action_createkey_random_body">Creates a random secret key.\nThis is the most secure key type, but needs some effort sharing it with your remote parties.</string>
    <string name="action_createkey_pw_title">Password-based Key</string>
    <string name="action_createkey_pw_body">Creates a key based on a passphrase.\nThis is less secure, but you only need to agree on a passphrase, so the other party can generate a matching key.</string>
    <string name="create_key_enter_alias_title">Enter Key Alias</string>
    <string name="import_key_enter_alias_title">Enter Key Alias for Imported Key</string>
    <string name="create_key_enter_alias_body">When sending encrypted messages, you will select a key by its alias.\nUsually you should enter the name of your friend you will be sharing this key with.</string>
    <string name="create_key_enter_alias_hint">Alias</string>
    <string name="createkey_pbe_title">Shared Keyphrase</string>
    <string name="createkey_pbe_alias_hint">Alias</string>
    <string name="createkey_pbe_alias_caption">This is the *name* of your key, please enter at least %1$s characters</string>
    <string name="createkey_pbe_phrase_hint">Keyphrase</string>
    <string name="createkey_pbe_phrase_caption">Minimum %1$s characters long, but the longer the keyphrase the more security you will get!</string>
    <string name="action_create_key">Save</string>
    <string name="error_sharedsecret_length">The shared secret phrase must be at least %1$s characters long!</string>
    <string name="key_details_header">Key Details</string>
    <string name="key_details_label_type">Key-Type:</string>
    <string name="key_details_label_hash">Fingerprint:</string>
    <string name="key_details_label_createdate">Created:</string>
    <string name="key_details_label_alias">Alias:</string>
    <string name="key_details_label_sharedsecret">Secret keyphrase:</string>
    <string name="key_details_label_qr">Shared secret key:</string>
    <string name="action_delete_key_confirm">Really delete this key?</string>
    <string name="action_delete_key">Delete</string>
    <string name="msg_scan_qr">Place QR-Code inside the viewfinder rectangle to scan it.</string>
    <string name="error_invalid_barcode_format">Invalid Barcode, expected a QR-Code!</string>
    <string name="error_invalid_barcode_content">Invalid QR-Code. No Key found!</string>
    <string name="error_key_exists">You already have this key! Your alias: \"%1$s\"</string>
    <string name="action_unlock_key">Unlock key</string>
    <string name="error_alias_illegal">Illegal Alias Name \"%1$s\"</string>
    <string name="lorem" translatable="false">Lorem Ipsum</string>
    <string name="loremlong" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="key_details_label_confirmeddate">Confirmed:</string>
    <string name="label_key_unconfirmed">unconfirmed</string>
    <string name="dialog_confirm_key_text">Confirm this key by calling your friend on the phone and make sure the fingerprint below matches the fingerprint of your friends\'s key!\n%1$s</string>
    <string name="title_activity_generate_key">Key Generator</string>
    <string name="title_activity_generate_key_passphrasebased">Passphrase Key</string>
    <string name="title_activity_generate_key_imported">Imported Key</string>
    <string name="title_dialog_add_key">Add Key</string>
    <string name="action_reveal">reveal</string>
    <string name="encryption_method_sym">ChaCha20 + Poly1305 (symmetric)</string>
    <string name="encryption_method_pgp">PGP (asymmetric)</string>
    <string name="key_type_pgp">Public Key (PGP)</string>
    <string name="signature_result__invalid_insecure">Invalid signature\n(insecure cryptographic algorithms/protocol)</string>
    <string name="signature_result__invalid_key_expired">Invalid signature\n(Key is expired)</string>
    <string name="signature_result__invalid_key_revoked">Invalid signature (Key is revoked)</string>
    <string name="signature_result__invalid">Invalid signature</string>
    <string name="signature_result__key_missing">Signature could not be verified\n(Missing key)</string>
    <string name="signature_result__no_signature">No signature found</string>
    <string name="signature_result__valid_confirmed">Signature valid</string>
    <string name="signature_result__valid_unconfirmed">Signature valid\n(with UNCONFIRMED key\</string>
    <string name="please_wait">please wait …</string>
    <string name="progress_saving">Saving Key</string>
    <string name="label_keystore_passphrase">Key password</string>
    <string name="remember">Remember</string>
    <string name="keystore_ttl_lock_screen">until screen off</string>
    <string name="keystore_ttl_five_minutes">5 minutes</string>
    <string name="keystore_ttl_thirty_minutes">30 minutes</string>
    <string name="keystore_ttl_one_hour">one hour</string>
    <string name="keystore_ttl_six_hours">6 hours</string>
    <string name="keystore_ttl_one_day">one day</string>
    <string name="keystore_ttl_forever">forever</string>
    <string name="unlock_key_title">Unlock Key \"%1$s\"</string>
    <string name="progress_generating_key">generating…</string>
    <string name="manual_padder_hint">(manually enter text to pad)</string>
    <string name="dialog_save_key_title">Save Key</string>
    <string name="dialog_save_key_content">Enter a password to protect the key</string>
    <string name="dialog_save_key_input_hint">At least %1$s characters</string>
    <string name="new_password_keystore_title">Key Password</string>
    <string name="new_password_share_title">Sharing Password</string>
    <string name="new_password_pbkdf_title">Passphrase Based Key</string>
    <string name="new_password_keystore_text">Choose a strong password. It protects your key in case your device gets stolen or confiscated!</string>
    <string name="new_password_share_text">Choose a strong password. It protects your key when sharing it with an insecure app!</string>
    <string name="new_password_pbkdf_text">Choose a strong password to generate your key from! Everybody who knows this password can recreate your key!</string>
    <string name="new_password_label_password">Password</string>
    <string name="new_password_label_password_again">Repeat Password</string>
    <string name="new_password_label_show_password">Show Password</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_generate">Continue</string>
    <string name="action_suggest_password">Suggest strong password</string>
    <plurals name="notification_cachedkeys_title">
        <item quantity="one">One cached password</item>
        <item quantity="other">%d cached passwords</item>
    </plurals>
    <string name="notification_action_clear_cached_keys">Clear all</string>
    <string name="progress_unlocking">Unlocking Key</string>
    <string name="please_wait_decrypting">decrypting</string>
    <string name="please_wait_encrypting">encrypting</string>
    <string name="please_wait_keyderivation">Creating key from password</string>
    <string name="action_send_encrypted">Send encrypted</string>
    <string name="action_view_encrypted">View/Print encrypted</string>
    <string name="action_view_plain">View UNencrypted</string>
    <string name="action_send_plain">Send UNencrypted</string>
    <string name="progress_encrypting">Sharing Key</string>
    <string name="importimage_nothing_found">No key found in this image!</string>
    <string name="import_decrypt_key_title">Key Import</string>
    <string name="import_decrypt_key_content">Enter sharing password to decrypt this key</string>
    <string name="intent_chooser_send_encryptedkey">Choose app to send to</string>
    <string name="intent_chooser_view_encryptedkey">Choose app to view with</string>
    <string name="key_import_key_decrypted">Key successfully decrypted. Now enter an alias and save it!</string>
    <string name="title_activity_generate_key_scanning">Scan QR-Code Key</string>
    <string name="key_age">Created %1$s</string>
    <string name="dialog_explore_label_problem">Problem:</string>
    <string name="dialog_explore_label_encryptedtext">Encrypted Text:</string>
    <string name="dialog_explore_label_encryptedtextsize">Size (UTF-8):</string>
    <string name="dialog_explore_label_decryptedtext">Decrypted Text:</string>
    <string name="dialog_explore_label_encoding">Encoding:</string>
    <string name="dialog_explore_label_innerpadding" translatable="false">Random Padding:</string>
    <string name="dialog_explore_label_encryptionmethod">Encryption:</string>
    <string name="dialog_explore_label_keytype">Key-Type:</string>
    <string name="dialog_explore_label_keyconfirmation">Key-Confirmation:</string>
    <string name="dialog_explore_label_keyalias">Key</string>
    <string name="dialog_explore_label_password">Password</string>
    <string name="dialog_explore_label_allrecipients">Encrypted to:\n(Public Keys)</string>
    <string name="dialog_explore_label_signature">Signature:</string>
    <string name="dialog_explore_button_key_details">Show Key Details</string>
    <string name="action_share_decrypted">Share DECRYPTED text</string>
    <string name="action_share_encrypted">Share ENCRYPTED text</string>
    <string name="action_share_gpg_ascii">Share PGP message (ascii-armored)</string>
    <string name="action_share_sym_base64">Share symmetric message (json)</string>
    <string name="confirmation_share_decrypted__content">Are you sure you want to share the DECRYPTED plaintext with another, possibly insecure app?</string>
    <string name="action_show_all_content">%1$s more characters.\nShow all</string>
    <string name="action_help">Help</string>
    <string name="accept_insecure_password">I understand that this password is weak, but I want to use it anyway!</string>
    <string name="simple_password_decrypt_this">to decrypt this:</string>
    <string name="simple_password_unlock_key">Unlock Key …</string>
    <string name="simple_password_to_decrypt_this">to decrypt this text:</string>
</resources>