<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="io.oversec.one.crypto.sym.ui.KeyDetailsActivity">
    <item
            android:id="@+id/action_delete_key"
            android:title="@string/action_delete_key"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_send_encrypted"
            android:title="@string/action_send_encrypted"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_view_encrypted"
            android:title="@string/action_view_encrypted"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/help"
            android:title="@string/action_help"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"/>

</menu>