<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="5dp"
              android:paddingRight="5dp">

    <TextView
            android:id="@+id/new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/new_password_keystore_title"
            android:textAppearance="@style/MyMedium"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp">


                <TextView
                        android:id="@+id/new_password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/new_password_keystore_text"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>

                <Button
                        android:id="@+id/new_password_generate"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:minHeight="6dp"
                        android:text="@string/action_suggest_password"/>


                <io.oversec.one.crypto.ui.util.UntouchableSeekBar
                        android:id="@+id/create_key_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:paddingLeft="0dp"
                        android:paddingRight="0dp"
                        android:paddingTop="3dp"
                        android:thumb="@null"/>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/new_password_password_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <io.oversec.one.crypto.ui.util.EditTextPasswordWithVisibilityToggle
                            android:id="@+id/new_password_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:ems="10"
                            android:maxLines="1"
                            android:hint="@string/new_password_label_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:text="@string/prefill_password_fields"

                    />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/new_password_password_again_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <io.oversec.one.crypto.ui.util.EditTextPasswordWithVisibilityToggle
                            android:id="@+id/new_password_password_again"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="2dp"
                            android:ems="10"
                            android:maxLines="1"
                            android:hint="@string/new_password_label_password_again"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:text="@string/prefill_password_fields"

                    />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                        android:id="@+id/cb_accept_weak_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accept_insecure_password"
                        android:textColor="@color/colorWarning"/>


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>